force-app/main/default/objects/Case/fields/Case_Urgency__c.field-meta.xml
<CustomField>
    <fullName>Case_Urgency__c</fullName>
    <formula>IMAGE( 
CASE( Priority, 
&quot;Low&quot;, &quot;/img/samples/flag_green.gif&quot;,
&quot;Medium&quot;, &quot;/img/samples/flag_yellow.gif&quot;,
&quot;High&quot;, &quot;/img/samples/flag_red.gif&quot;, 
&quot;/s.gif&quot;), 
&quot;Priority Flag&quot;, 25, 25)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Urgency</label>
    <type>Text</type>
</CustomField>