force-app/main/default/objects/Case/fields/Followup_Overdue__c.field-meta.xml
<CustomField>
    <fullName>Followup_Overdue__c</fullName>
    <formula>IF(  
  Followup_Date__c &gt; TOday(), 
  IMAGE(&apos;https://img.icons8.com/color/48/000000/low-importance--v1.png&apos;, &apos;Not due&apos;,15,15), 
  IF (
    Followup_Date__c == TODAY(),  
    IMAGE(&apos;https://img.icons8.com/color/48/000000/medium-priority.png&apos;, &apos;Due Today&apos;, 15,15), 
    IMAGE( &apos;https://img.icons8.com/color/48/000000/high-priority.png&apos;, &apos;Overdue&apos;, 15,15)
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Followup Overdue</label>
    <type>Text</type>
</CustomField>