force-app/main/default/objects/Case/fields/Lead_or_Loan_Owner__c.field-meta.xml
<CustomField>
    <fullName>Lead_or_Loan_Owner__c</fullName>
    <formula>IF( NOT(ISBLANK(Loan__c)),  Loan__r.Loan_Originator_User__r.Alias , IF (NOT(ISBLANK( Lead__c )),  Lead__r.Owner:User.Alias , &quot;&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead or Loan Owner</label>
    <type>Text</type>
</CustomField>