force-app/main/default/objects/Case/fields/LH__Test_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>LH__Test_Date_Time__c</fullName>
    <description>DateTime field created for unit testing purposes.</description>
    <label>Test Date/Time</label>
    <type>DateTime</type>
</CustomField>