force-app/main/default/objects/Case/fields/Loan_Amount_f__c.field-meta.xml
<CustomField>
    <fullName>Loan_Amount_f__c</fullName>
    <formula>IF (NOT(ISBLANK(Loan__c)),  Loan__r.Loan_Amount__c , IF(NOT(ISBLANK( Lead__c )),  Lead__r.First_Loan_Amount_Scenario_1__c , 0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Loan Amount formula</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>