force-app/main/default/objects/Case/fields/Loan_COE__c.field-meta.xml
<CustomField>
    <fullName>Loan_COE__c</fullName>
    <formula>Loan__r.COE__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Loan COE</label>
    <type>Date</type>
</CustomField>