force-app/main/default/objects/Case/fields/Loan_Household__c.field-meta.xml
<CustomField>
    <fullName>Loan_Household__c</fullName>
    <formula>Loan__r.Household_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Loan Household</label>
    <type>Text</type>
</CustomField>