force-app/main/default/objects/Case/fields/Loan_Lock_Expiration__c.field-meta.xml
<CustomField>
    <fullName>Loan_Lock_Expiration__c</fullName>
    <formula>Loan__r.Lock_Expiration__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Loan Lock Expiration</label>
    <type>Date</type>
</CustomField>