force-app/main/default/objects/Case/fields/Loan_Originator__c.field-meta.xml
<CustomField>
    <fullName>Loan_Originator__c</fullName>
    <formula>TEXT(Loan__r.Loan_Originator__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Loan Originator</label>
    <type>Text</type>
</CustomField>