force-app/main/default/objects/Case/fields/Loan_Stage__c.field-meta.xml
<CustomField>
    <fullName>Loan_Stage__c</fullName>
    <formula>TEXT(Loan__r.StageName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Loan Stage</label>
    <type>Text</type>
</CustomField>