force-app/main/default/objects/Case/fields/My_Loan_or_Lead__c.field-meta.xml
<CustomField>
    <fullName>My_Loan_or_Lead__c</fullName>
    <formula>IF(Lead_or_Loan_Owner__c =  $User.Alias , TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>My Loan or Lead</label>
    <type>Checkbox</type>
</CustomField>