force-app/main/default/objects/Case/fields/Next_Followup__c.field-meta.xml
<CustomField>
    <fullName>Next_Followup__c</fullName>
    <label>Next Followup In</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 Day</fullName>
            </value>
            <value>
                <fullName>2 Days</fullName>
            </value>
            <value>
                <fullName>1 Week</fullName>
            </value>
            <value>
                <fullName>2 Weeks</fullName>
            </value>
            <value>
                <fullName>3 Weeks</fullName>
            </value>
            <value>
                <fullName>1 Month</fullName>
            </value>
            <value>
                <fullName>3 Days</fullName>
                <isActive>false</isActive>
                <label>3 Days</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>