force-app/main/default/objects/Case/fields/Waiting_Reason__c.field-meta.xml
<CustomField>
    <fullName>Waiting_Reason__c</fullName>
    <label>Waiting Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rate Watch</fullName>
            </value>
            <value>
                <fullName>Credit Repair</fullName>
            </value>
            <value>
                <fullName>Down Payment Limitation</fullName>
            </value>
            <value>
                <fullName>Property Limitation</fullName>
            </value>
            <value>
                <fullName>Income Limitation</fullName>
            </value>
            <value>
                <fullName>Construction Plans</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>