force-app/main/default/objects/Case/listViews/Active_Loans_OFlow.listView-meta.xml
<ListView>
    <fullName>Active_Loans_OFlow</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>Loan__c</columns>
    <columns>Lead__c</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>CASES.STATUS</field>
        <operation>equals</operation>
        <value>Active Loans</value>
    </filters>
    <label>Active Loans OFlow</label>
</ListView>