force-app/main/default/objects/Case/listViews/AllOpenCases.listView-meta.xml
<ListView>
    <fullName>AllOpenCases</fullName>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>Lead__c</columns>
    <columns>Loan__c</columns>
    <columns>Loan_Amount_f__c</columns>
    <columns>Net_Profit__c</columns>
    <columns>CASES.STATUS</columns>
    <columns>Loan_Stage__c</columns>
    <columns>Lead_Status__c</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>OWNER_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.STATUS</field>
        <operation>equals</operation>
        <value>Post Close</value>
    </filters>
    <label>All Open OFlow</label>
</ListView>