force-app/main/default/objects/Case/listViews/MyCases.listView-meta.xml
<ListView>
    <fullName>MyCases</fullName>
    <booleanFilter>1 AND 2 AND 3 AND 4 AND 5</booleanFilter>
    <columns>Loan_Household__c</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Loan__c</columns>
    <columns>Lead__c</columns>
    <columns>Followup_Date__c</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>Loan_Stage__c</columns>
    <columns>NAME</columns>
    <columns>Loan_COE__c</columns>
    <columns>Loan_Lock_Expiration__c</columns>
    <columns>Loan_Originator__c</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>OWNER_NAME</columns>
    <columns>CASES.CREATED_DATE</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>CASES.CLOSED</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>CASES.STATUS</field>
        <operation>equals</operation>
        <value>New,Qualifying,Proposal,RateWatch,Requested,Pre-Approve,House Hunting,Place,Lock,Remedy</value>
    </filters>
    <filters>
        <field>Lead_Status__c</field>
        <operation>notEqual</operation>
        <value>Nurturing</value>
    </filters>
    <filters>
        <field>Lead_Status__c</field>
        <operation>notEqual</operation>
        <value>Active Loan</value>
    </filters>
    <filters>
        <field>OWNER_NAME</field>
        <operation>contains</operation>
        <value>Broderick</value>
    </filters>
    <label>1. My OFlow</label>
</ListView>