force-app/main/default/objects/Case/listViews/X1_Today_s_Team_Broderick_OFlows.listView-meta.xml
<ListView>
    <fullName>X1_Today_s_Team_Broderick_OFlows</fullName>
    <booleanFilter>1 AND 2 AND (3 OR 4) AND 5 AND (6 OR 7)</booleanFilter>
    <columns>ACCOUNT.NAME</columns>
    <columns>Lead__c</columns>
    <columns>Loan__c</columns>
    <columns>Followup_Overdue__c</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>Loan_Stage__c</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>OWNER_NAME</columns>
    <columns>Loan_Originator__c</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <columns>CONTACT.FIRST_NAME</columns>
    <columns>CONTACT.LAST_NAME</columns>
    <columns>ACCOUNT.SITE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.CLOSED</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>CASES.STATUS</field>
        <operation>equals</operation>
        <value>New,Qualifying,Proposal,Requested,Pre-Approve,House Hunting,Place,Lock,Remedy</value>
    </filters>
    <filters>
        <field>Loan_Originator__c</field>
        <operation>contains</operation>
        <value>broderick</value>
    </filters>
    <filters>
        <field>Loan_Originator__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>OWNER_NAME</field>
        <operation>contains</operation>
        <value>broderick</value>
    </filters>
    <filters>
        <field>Followup_Date__c</field>
        <operation>lessOrEqual</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>Followup_Date__c</field>
        <operation>equals</operation>
    </filters>
    <label>1. Today&apos;s Team Broderick OFlows</label>
    <sharedTo>
        <role>Executive</role>
    </sharedTo>
</ListView>